--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 }
-#home-bg{
+/* #home-bg{
     background-image: url("../Images/home1-bg.jpg");
     background-size: cover;
     height: 650px;
@@ -67,13 +67,4 @@ header{
 }
 .menu{
     margin: 20px;
-}
-#image-pizza{
-    animation-name: pizzaimg;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    
-}
-@keyframes pizzaimg{
-    
-}
+} */
