--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,12 @@
     background-size: cover;
     height: 650px;
 }
-/* .logo img{
+.logo img{
     width: 100px;
     height: 100px;
     float: left;
 }
-header{
+/* header{
     background-color: rgb(51, 17, 13);
     height: 100px;
     border-radius: 30px;
