--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,13 @@
     height: 100px;
     float: left;
 }
-/* header{
+header{
     background-color: rgb(51, 17, 13);
     height: 100px;
     border-radius: 30px;
     padding-bottom: 10px;
 }
-.topnav{
+/* .topnav{
     text-align: center;
 }
 .topnav a{
