--- a/css/styles.css
+++ b/css/styles.css
@@ -35,11 +35,11 @@ header{
     background-color: white;
     color: rgb(51, 17, 13);
 }
-/* .welcome-text{
+.welcome-text{
     margin-left: 40%;
     margin-top: 25%;
 }
-.welcome-text a{
+/* .welcome-text a{
     text-decoration: none;
     color: white;
     font-size: 30px;
