--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,11 @@ header{
     border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
-/* .welcome-text a:hover{
+.welcome-text a:hover{
     background-color: white;
     color: rgb(51, 17, 13);
 }
-#menu-bg{
+/* #menu-bg{
     height: 1000px;
     color: black;
 }
