Styling the menu-bg id

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,11 +53,11 @@ header{
     background-color: white;
     color: rgb(51, 17, 13);
 }
-/* #menu-bg{
+#menu-bg{
     height: 1000px;
     color: black;
 }
-#menu-cont{
+/* #menu-cont{
     height: 1000px;
 }
 #header{
