--- a/css/styles.css
+++ b/css/styles.css
@@ -57,10 +57,10 @@ header{
     height: 1000px;
     color: black;
 }
-/* #menu-cont{
+#menu-cont{
     height: 1000px;
 }
-#header{
+/* #header{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     text-align: center;
