--- a/css/styles.css
+++ b/css/styles.css
@@ -60,11 +60,11 @@ header{
 #menu-cont{
     height: 1000px;
 }
-/* #header{
+#header{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     text-align: center;
 }
-.menu{
+/* .menu{
     margin: 20px;
 } */
