--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,8 @@ header{
 #menu-bg{
     height: 1000px;
     color: black;
+    background-image: url("../Images/home-bg.jpg");
+    background-size: cover;
 }
 #menu-cont{
     height: 1000px;
@@ -67,4 +69,50 @@ header{
 }
 .menu{
     margin: 20px;
+}
+/* #size label{
+    margin: 30px;
+}
+#crust label{
+    margin: 30px;
+}
+#toppings label{
+    margin: 30px;
+} */
+select{
+    width: 150px;
+    padding: 5px;
+    background-color: white;
+    font-family: monospace;
+    font-weight: 500;
+    font-size: 15px;
+}
+#quantity{
+    text-align: center;
+    width: 75px;
+    background-color: white;
+    font-family: monospace;
+    font-weight: 500;
+    font-size: 15px;
+}
+button{
+    background-color: white;
+    color: rgb(51, 17, 13);
+    font-weight: 600;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 5px;
+    font-size: 20px;
+}
+button:hover{
+    background-color: rgb(51, 17, 13);
+    color: white;
+}
+.order label{
+    font-family: monospace;
+    font-size: 17px;
+    font-weight: 600;
+}
+.order{
+    border: 2px solid rgb(51, 17, 13);
+    padding: 10px;
 }
