--- a/css/styles.css
+++ b/css/styles.css
@@ -118,3 +118,29 @@ button:hover{
     border: 3px solid black;
     padding: 10px;
 }
+#offers{
+    border: 3px solid rgb(51, 17, 13);
+    font-family: monospace;
+    font-weight: 500;
+    font-size: 14px;
+    padding: 5px;
+}
+#offers ul li{
+    list-style-type: none;
+}
+#offers h3{
+    text-align: center;
+    text-decoration: underline;
+    color: black;
+    font-weight: 700;
+}
+#recipe{
+    border-radius: 10px;
+    background-color: black;
+    opacity: 0.7;
+    color: white;
+    font-size: 18px;
+    font-family: monospace;
+    font-weight: 500;
+    padding: 10px;
+}
