--- a/css/styles.css
+++ b/css/styles.css
@@ -143,4 +143,15 @@ button:hover{
     font-family: monospace;
     font-weight: 500;
     padding: 10px;
+    text-align: center;
+}
+#recipe ul li{
+    list-style-type: none;
+}
+#recipe a{
+    text-decoration: none;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    padding: 5px;
 }
