--- a/css/styles.css
+++ b/css/styles.css
@@ -186,3 +186,16 @@ button:hover{
     text-align: center;
     text-decoration: underline;
 }
+#branches{
+    background-color: black;
+    opacity: 0.7;
+    height: 300px;
+    color: white;
+    font-size: 14px;
+    font-family: monospace;
+    font-weight: 500;
+    padding: 10px;
+}
+/* #about-us{
+    justify-content: space-between;
+} */
