Styling the about-us i

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,6 @@ button:hover{
     font-weight: 500;
     padding: 10px;
 }
-/* #about-us{
+#about-us{
     justify-content: space-between;
-} */
+}
