--- a/css/styles.css
+++ b/css/styles.css
@@ -70,15 +70,6 @@ header{
 .menu{
     margin: 20px;
 }
-/* #size label{
-    margin: 30px;
-}
-#crust label{
-    margin: 30px;
-}
-#toppings label{
-    margin: 30px;
-} */
 select{
     width: 150px;
     padding: 5px;
@@ -119,6 +110,7 @@ button:hover{
     padding: 10px;
 }
 #offers{
+    cursor: pointer;
     border: 3px solid rgb(51, 17, 13);
     font-family: monospace;
     font-weight: 500;
@@ -135,6 +127,7 @@ button:hover{
     font-weight: 700;
 }
 #recipe{
+    cursor: pointer;
     border-radius: 10px;
     background-color: black;
     opacity: 0.7;
@@ -165,7 +158,7 @@ button:hover{
 #about-bg{
     background-image: url("../Images/abot.jpg");
     background-size: cover;
-    height: 650px;
+    height: 670px;
 }
 #about{
     background-color: black;
@@ -175,6 +168,7 @@ button:hover{
     font-family: monospace;
     font-weight: 500;
     padding: 10px;
+    cursor: pointer;
 }
 #about ul li{
     text-align: center;
@@ -195,6 +189,7 @@ button:hover{
     font-family: monospace;
     font-weight: 500;
     padding: 10px;
+    cursor: pointer;
 }
 #about-us{
     justify-content: space-between;
