--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,7 @@ button:hover{
     font-weight: 500;
     padding: 10px;
     cursor: pointer;
+    border-radius: 10px;
 }
 #about ul li{
     text-align: center;
@@ -190,6 +191,7 @@ button:hover{
     font-weight: 500;
     padding: 10px;
     cursor: pointer;
+    border-radius: 10px;
 }
 #about-us{
     justify-content: space-between;
