Styling the subject id

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,8 @@ button #button:hover{
 }
 #county{
     width: 600px;
+    background-color: white;
+    color: black;
 }
 #btn{
     padding: 5px;
